<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.popups.AddSectionPopupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fundo_popup">

        <TextView
            android:id="@+id/textViewNomeSetor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_nome_setor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/fundo_input"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNomeSetor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputSectionName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:hint="@string/txt_insira_nome_setor"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewQtdMesasSetores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_desc_mesas_setores"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMesas"
            android:layout_width="320dp"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewQtdMesasSetores" />

        <ImageButton
            android:id="@+id/btnConfirmSectionChange"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/fundo_botao_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewMesas" />

        <TextView
            android:id="@+id/textViewSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_salvar"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnConfirmSectionChange"
            app:layout_constraintEnd_toEndOf="@+id/btnConfirmSectionChange"
            app:layout_constraintStart_toStartOf="@+id/btnConfirmSectionChange"
            app:layout_constraintTop_toTopOf="@+id/btnConfirmSectionChange" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>