<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.popups.AddWaiterPopupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fundo_popup">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_add_garcom"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/email_input"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputWaiterEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="55dp"
                android:hint="@string/txt_email_garcom"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/email_input"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputWaiterName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="55dp"
                android:hint="@string/txt_nome_garcom"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/password_input"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="55dp"
                android:hint="@string/waiter_pass_input"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color"
                android:textSize="20sp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/password_input"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="55dp"
                android:hint="@string/waiter_confirm_pass_input"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btnAddWaiter"
            android:layout_width="155dp"
            android:layout_height="56dp"
            android:layout_marginTop="88dp"
            android:background="@drawable/fundo_botao_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_concluido"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnAddWaiter"
            app:layout_constraintEnd_toEndOf="@+id/btnAddWaiter"
            app:layout_constraintStart_toStartOf="@+id/btnAddWaiter"
            app:layout_constraintTop_toTopOf="@+id/btnAddWaiter" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>